--- a/render.yaml
+++ b/render.yaml
@@ -21,6 +21,7 @@ services:
   - type: worker
     name: listener
     env: python
+    pythonVersion: "3.11"
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python listener.py"
     envVars:
@@ -35,6 +36,7 @@ services:
   - type: worker
     name: reply
     env: python
+    pythonVersion: "3.11"
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python reply.py"
     envVars:
@@ -49,6 +51,7 @@ services:
   - type: worker
     name: poster
     env: python
+    pythonVersion: "3.11"
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python poster.py"
     envVars:
