build(render): Force cache clear to resolve Python version issue
- The build environment was using a cached virtualenv with Python 3.13 dependencies, causing an ImportError even after the Python version was locked to 3.11.
- This commit adds the  environment variable to all services in the render.yaml.
- This will force Render to perform a clean build without cache, ensuring the correct Python 3.11 environment and compatible dependencies are installed.

--- a/render.yaml
+++ b/render.yaml
@@ -25,6 +25,8 @@ services:
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python listener.py"
     envVars:
+      - key: RENDER_CACHE_CLEAR
+        value: "true"
       - fromGroup: reddit-creds
       - key: REDIS_URL
         fromService:
@@ -40,6 +42,8 @@ services:
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python reply.py"
     envVars:
+      - key: RENDER_CACHE_CLEAR
+        value: "true"
       - fromGroup: reddit-creds
       - key: REDIS_URL
         fromService:
@@ -55,6 +59,8 @@ services:
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python poster.py"
     envVars:
+      - key: RENDER_CACHE_CLEAR
+        value: "true"
       - fromGroup: reddit-creds
       - key: REDIS_URL
         fromService:
