--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ redis==5.0.1
 pyyaml==6.0.1
 schedule==1.2.0
 praw
-psycopg[binary]==3.1.18
-psycopg-pool==3.2.2 
+psycopg[binary]~=3.2.2
+psycopg-pool~=3.2.2 
