--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-asyncpraw==7.8.1
+asyncpraw==7.7.1
 openai==1.3.7
-python-dotenv==1.0.0
-httpx==0.25.2
 redis==5.0.1
-pyyaml==6.0.1
+psycopg2-binary==2.9.7
+python-dotenv==1.0.0
+PyYAML==6.0.1
+httpx==0.25.2
+aiohttp==3.9.1
+beautifulsoup4==4.12.2
+lxml==4.9.3
 schedule==1.2.0
 praw
 psycopg[binary]~=3.2.2
