--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
 asyncpraw==7.7.1
 openai==1.3.7
 redis==5.0.1
-psycopg2-binary==2.9.7
+psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 PyYAML==6.0.1
 httpx==0.25.2
 aiohttp==3.9.1
 beautifulsoup4==4.12.2
-lxml==4.9.3
 schedule==1.2.0
-praw
+praw==7.7.1
 psycopg[binary]~=3.2.2
 psycopg-pool~=3.2.2 
